@@ -1,7 +1,8 @@
 
 2011-03-04 Rupert Germann <rupi@gmx.li>
-	* fixed bug 15322: remove folder icon code which is deprecated since TYPO3 v4.4 (thanks to Simon Schick)
-	* fixed bug 17458: Hostname appended twice to internal links in feed when config.absRefPrefix set (thanks to Christian Weiske)
+	* fixed bug #15322: remove folder icon code which is deprecated since TYPO3 v4.4 (thanks to Simon Schick)
+	* fixed bug #17458: Hostname appended twice to internal links in feed when config.absRefPrefix set (thanks to Christian Weiske)
+	* fixed bug #14450: local_cObj is overwritten with data from related news by category (thanks to Sven Burkert)
 
 2011-03-03 Rupert Germann <rupi@gmx.li>
 	* fixed bug #16876: Plugin-CE not editable / t3lib_error_Exception / t3lib_iconWorks::getSpriteIconForRecord() (thanks to Thomas Oliver Moll)
